examples/hello-nginx/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-nginx
  namespace: hello
spec:
  selector:
    app.kubernetes.io/name: hello-nginx
  ports:
    - name: http
      port: 80
      targetPort: http
  type: ClusterIP
