examples/hello-nginx/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: hello
  namespace: hello
spec:
  parentRefs:
    - name: main
      namespace: envoy-gateway-system
  hostnames:
    - hello.cloud.fam-melcher.net
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: hello-nginx
          port: 80
